# 33-4-arithmetic-average

./: CMakeLists.txt  README.md
include/: functions.h
src/: CMakeLists.txt  main.cpp
